force-app/main/default/objects/dw_ecard_app_work_center_master__x/dw_ecard_app_work_center_master__x.object-meta.xml
<CustomObject>
    <description>dw_ecard_app$work_center_master</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_ecard_app$work_center_master</externalName>
    <label>dw_ecard_app$work_center_master</label>
    <pluralLabel>dw_ecard_app$work_center_master</pluralLabel>
</CustomObject>