force-app/main/default/objects/dw_ecard_app_work_center_master__x/fields/department_id__c.field-meta.xml
<CustomField>
    <fullName>department_id__c</fullName>
    <description>department_id</description>
    <externalDeveloperName>department_id</externalDeveloperName>
    <label>department_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>