force-app/main/default/objects/dw_ecard_app_work_center_master__x/fields/reference_key__c.field-meta.xml
<CustomField>
    <fullName>reference_key__c</fullName>
    <description>reference_key</description>
    <externalDeveloperName>reference_key</externalDeveloperName>
    <label>reference_key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>