force-app/main/default/objects/dw_ecard_app_work_center_master__x/fields/workcenter_code__c.field-meta.xml
<CustomField>
    <fullName>workcenter_code__c</fullName>
    <description>workcenter_code</description>
    <externalDeveloperName>workcenter_code</externalDeveloperName>
    <label>workcenter_code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>