force-app/main/default/objects/dw_ecard_app_work_center_master__x/fields/workcenter_id__c.field-meta.xml
<CustomField>
    <fullName>workcenter_id__c</fullName>
    <description>workcenter_id</description>
    <externalDeveloperName>workcenter_id</externalDeveloperName>
    <label>workcenter_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>