force-app/main/default/objects/dw_ecard_app_work_center_master__x/fields/workcenter_name__c.field-meta.xml
<CustomField>
    <fullName>workcenter_name__c</fullName>
    <description>workcenter_name</description>
    <externalDeveloperName>workcenter_name</externalDeveloperName>
    <label>workcenter_name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>